#:              please contact AUTHORS for additional information
#:

/**

\page changelog ChangeLog

\n
\n

\section V0_17 ?? ??? 2013 - NHI1-0.17, PLMK-2.5 und libmsgque-5.5

#1 fig bug in rubymsgque, now the toplevel class initialize method does not 
need a template dummy argument anymore.

\vaerbatim
class MyServer < MqS
  def initialize()
    super()
    ...
  end
  ...
end
\endverbatim

\n
\n

\section V0_16 08 Apr 2011 - NHI1-0.16, PLMK-2.4 und libmsgque-5.4

this release change the build-environement on windows
from Visual-X-Express to cygwin/mingw

\verbatim
svn diff --summarize -r '{2011-03-15}:{2011-05-8}' svn+ssh://svn.berlios.de/svnroot/repos/nhi1/trunk
\endverbatim

\n
\n

\section V0_15 15 Feb 2011 - NHI1-0.15, PLMK-2.4 und libmsgque-5.4

Update \b windows support

\verbatim
svn diff --summarize -r '{2011-02-27}:{2011-03-15}' svn+ssh://svn.berlios.de/svnroot/repos/nhi1/trunk
\endverbatim

\n
\n

\section V0_14 27 Feb 2011 - NHI1-0.14, PLMK-2.3 und libmsgque-5.3

This release add \e persistent-transaction-support-part-2. The \RNS{Storage}
interface was added to store/retrieve a \e data-package from/to the database.

\verbatim
svn diff --summarize -r '{2011-02-05}:{2011-02-27}' svn+ssh://svn.berlios.de/svnroot/repos/nhi1/trunk
\endverbatim

\n
\n

\section V0_13 05 Feb 2011 - NHI1-0.13, PLMK-2.2 und libmsgque-5.2

This release add \e persistent-transaction-support-part-1 and an improved \e factory-interface.
In addition some code/documentation errors were fixed.

\verbatim
svn diff --summarize -r '{2011-01-21}:{2011-02-05}' svn+ssh://svn.berlios.de/svnroot/repos/nhi1/trunk
\endverbatim

\n
\n

\section V0_12 21 Jan 2011 - NHI1-0.12, PLMK-2.1 und libmsgque-5.1

This release embed "sqlite" support into the PLMK kernel.

\verbatim
svn diff --summarize -r '{2011-01-14}:{2011-01-21}' svn+ssh://svn.berlios.de/svnroot/repos/nhi1/trunk
\endverbatim

\n
\n

\section V0_11 13 Jan 2011 - NHI1-0.11, PLMK-2.0 und libmsgque-5.0
