@@ -1,6 +1,6 @@
 #!/bin/bash
 #+
-#:  \file       bin/BuildLanguage
+#:  \file       bin/Nhi1BuildLanguage
 #:  \brief      \$Id$
 #:  
 #:  (C) 2013 - NHI - #1 - Project - Group
